# chip-8-interpreter

./: CMakeLists.txt  chip8emulator.cpp  cpu.cpp  cpu.h  memory.cpp  opcodetable.cpp
include/: cpu.h  memory.h  opcodes.h  opcodetable.h
include/interface/: controls.h  video.h
src/: chip8emulator.cpp  cpu.cpp  memory.cpp  opcodetable.cpp
src/interface/: controls.cpp  video.cpp
tests/: memorytest.cpp  opcodetabletest.cpp
